--- a/css/custom.css
+++ b/css/custom.css
@@ -50,6 +50,18 @@ a:hover {
   background-color: #171923;
 }
 
+.custom-card .media .media-body > p {
+  color:#6b707f;
+}
+.body_dark .custom-card .media .media-body > p{
+  color:#c7c9d3;
+}
+.body_dark .custom-card .theme_doc_item {
+  background-color:#12141c!important;
+}
+.body_dark .custom-card .theme_doc_item:hover {
+  box-shadow: 0 16px 30px 0 rgb(4 73 89 / 28%);
+}
 
 div.code-toolbar > .toolbar a:hover,
 div.code-toolbar > .toolbar a:focus,
