--- a/templates/partials/cards.html.twig
+++ b/templates/partials/cards.html.twig
@@ -1,16 +1,26 @@
+
+
 <div class="col-lg-8 col-md-8">
-    <div class="documentation_info">
-        {% if not hero_image_name %}
-            <div class="content-title text-center">
-                {% include 'partials/blog/title.html.twig' with {title_level: 'h2'} %}
-                {% if page.header.subtitle %}
-                <h3 >{{ page.header.subtitle }}</h3>
-                {% endif %}
+    <section class="theme_doc_area sec_pad">
+        <div class="container">
+            <div class="section_title text-center">
+                <h2 class="h_title wow fadeInUp">{{page.header.main_title}}</h2>
+                <p class="wow fadeInUp" data-wow-delay="0.2s">{{page.header.main_subtitle}}</p>
             </div>
-        {% endif %}
-                {{ page.content|raw }}
-            {% if page.header.continue_link is same as(true) and config.plugins.comments.enabled %}
-                {% include 'partials/comments.html.twig' %}
-        {% endif %}
-    </div>
+            <div class="row">
+            {% for card in page.header.cards %}
+                <div class="col-lg-4 col-sm-6">
+                <a class="custom-card" href="{{card.path}}">
+                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="media-body">
+                            <h4 class="c_head">{{card.title}}</h4>
+                            <p>{{card.subtitle}}</p>
+                        </div>
+                    </div>
+                 </a>
+                </div>
+            {% endfor %}
+            </div>
+        </div>
+    </section>
 </div>
