--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,7 +6,7 @@
 {% set hero_image_name = page.header.hero_image %}
 
 {% block body %}
- <section class="doc_documentation_area doc_documentation_full_area" id="sticky_doc">
+ <section class="doc_documentation_area doc_documentation_full_area">
     <div class="overlay_bg"></div>
             {% if show_breadcrumbs and config.plugins.breadcrumbs.enabled %}
                 {% include 'partials/breadcrumbs.html.twig' %}
