--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -112,8 +112,7 @@
 
         <section id="start">
         {% block body %}
-            <section class="doc_documentation_area doc_documentation_full_area" id="sticky_doc">
-                <div class="overlay_bg"></div>
+            <section class="doc_documentation_area doc_documentation_full_area">
                 <div class="container-fluid pl-60 pr-60 {{ grid_size }}">
                     <div class="row">
 
