--- a/css/custom.css
+++ b/css/custom.css
@@ -16,6 +16,29 @@ a:hover {
   padding-right: 8px;
   transition: all 0.2s ease-in;
 }
+.form-group {
+  margin-bottom: 0rem;
+}
+.form-control {
+  background-color: #fff0;
+  border: none;
+  border-bottom: 1px solid #ced4daad;
+  border-radius: none;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.search-item {
+  margin-left: 0px;
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+.form-control:focus {
+  color: #495057;
+  background-color: #fff0;
+  border-color: #80bdff00;
+  border-bottom: 1px solid #ffffff2e;
+  outline: 0;
+  box-shadow: none;
+}
 :hover > .toc-anchor, .toc-anchor:focus {
   opacity: 1;
 }
