--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -6,7 +6,7 @@
 {% set hero_image_name = page.header.hero_image %}
 
 {% block body %}
- <section class="doc_documentation_area doc_documentation_full_area" id="sticky_doc">
+ <section class="doc_documentation_area doc_documentation_full_area" >
     <div class="overlay_bg"></div>
             {% if show_breadcrumbs and config.plugins.breadcrumbs.enabled %}
                 {% include 'partials/breadcrumbs.html.twig' %}
@@ -23,11 +23,9 @@
                     </div>
                     <ul class="list-group list-group-flush">
                     {% for p in page.children %}
-
-                            <li class="list-group-item" style="background-color: transparent !important;border: none !important;">
-                                <a href="{{p.url}}">{{ p.title }}</a>
-                            </li>
-
+                        <li class="list-group-item" style="background-color: transparent !important;border: none !important;">
+                            <a href="{{p.url}}">{{ p.title }}</a>
+                        </li>
                     {% endfor %}
                       </ul>
                 </div>
