Fixed mobile changes

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -25,7 +25,7 @@
     }
     .doc_documentation_full_area .doc_right_mobile_menu{
         flex: 0 0 18.666667%;
-        max-width: 18.666667%;   
+        max-width: 18.666667%;
     }
     .doc_documentation_full_area.body_fixed .doc_left_sidebarlist {
         width: 338px;
@@ -850,7 +850,7 @@
 
 @media (max-height:768px){
     .signup_area_height{
-        min-height: 760px;   
+        min-height: 760px;
     }
 }
 
@@ -889,16 +889,33 @@
     .documentation_body {
         padding-top: 70px;
     }
-    .doc_right_mobile_menu,.doc_documentation_full_area .doc_right_mobile_menu,.onepage_doc_area .doc_right_mobile_menu{
+    .mobile{
+      display: block !important;
+    }
+    .display-none{
+      display:none;
+    }
+    .body_dark  .doc_right_mobile_menu{
         max-width: 250px;
         width: 100%;
         position: absolute;
         right: -250px;
-        background: #fafcfd;
+        background: #171923;
         padding-left: 15px;
         height: 100%;
         transition: all 0.5s;
         z-index: 2;
+    }
+    .doc_right_mobile_menu{
+      max-width: 250px !important;
+      width: 100%;
+      position: absolute;
+      right: -250px;
+      padding-left: 15px;
+      height: 100%;
+      transition: all 0.5s;
+      z-index: 2;
+        background: #fafcfd;
     }
     .doc_right_mobile_menu .doc_rightsidebar{
         border: 0;
@@ -1519,3 +1536,4 @@
         border: 0;
     }
 }
+
