--- a/templates/partials/right-sidebar.html.twig
+++ b/templates/partials/right-sidebar.html.twig
@@ -15,6 +15,10 @@
             padding: 10px;
         }
         </style>
+        <a href="https://blog.corebos.org/" target="_blank" style="margin-right: 10px;margin-bottom: 15px;" class="btn btn-info mobile">
+            <i style="padding-right: 7px;" class="icon_clock_alt"></i>
+            Updates
+        </a>
         {% macro toc_loop(items) %}
             {% import _self as self %}
             {% for item in items %}
