--- a/templates/partials/simplesearch-custom.html.twig
+++ b/templates/partials/simplesearch-custom.html.twig
@@ -20,6 +20,7 @@
                     <button type="submit" class="btn btn-dark borders" id="bttn">
                         <i class="fa fa-search"></i>
                     </button>
+                    <button class="btn btn-dark mg-left-20 mobile" onclick="darkModeToggle()"><i class="fa fa-moon"></i></button>
                 {% endif %}
             </div>
         </div>
